tests/derive_ui/struct_subcommand.stderr
error: `subcommand` cannot be used with `command`
  --> tests/derive_ui/struct_subcommand.rs:12:24
   |
12 | #[clap(name = "basic", subcommand)]
   |                        ^^^^^^^^^^
